--- a/data.ipynb
+++ b/data.ipynb
@@ -1513,7 +1513,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 13/3199 [00:05<23:28,  2.26it/s]"
+      "  4%|▍         | 138/3199 [01:05<23:28,  2.17it/s] "
      ]
     }
    ],
@@ -1534,6 +1534,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs.to_csv('datasets.logs')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 155,
    "metadata": {},
    "outputs": [],
@@ -1544,26 +1553,6 @@
     "url = \"https://files.rcsb.org/download/2IEC.pdb\"\n",
     "requests.get(url)\n",
     "r = requests.get(url)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<Response [200]>'"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(r)"
    ]
   }
  ],
