one_hot_encoding_aa

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3012,6 +3012,328 @@
    "source": [
     "tmp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_rotamer = pd.read_csv('df_rotamer.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pdb</th>\n",
+       "      <th>pdb_id</th>\n",
+       "      <th>metal</th>\n",
+       "      <th>ion</th>\n",
+       "      <th>bound_residue</th>\n",
+       "      <th>num_bound_residue</th>\n",
+       "      <th>paper_bound_residue</th>\n",
+       "      <th>num_paper_bound_residue</th>\n",
+       "      <th>num_bound_chain</th>\n",
+       "      <th>motif_binding_xyz</th>\n",
+       "      <th>num_NN_atom</th>\n",
+       "      <th>NN_atom_properties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1WWS_1.pdb</td>\n",
+       "      <td>1WWS</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>['Y']</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TYR.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': array([[[-1.849, -6.217,  5.614],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O'], 'l2_d': [2.8696444], 'van...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4K9N_1.pdb</td>\n",
+       "      <td>4K9N</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>Mg²⁺</td>\n",
+       "      <td>['N', 'L', 'R', 'N', 'L', 'R']</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ARG.ASN.LEU.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': array([[[ 5.206e+00, -6.530e-01, -3.41...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2A0Q_1.pdb</td>\n",
+       "      <td>2A0Q</td>\n",
+       "      <td>K</td>\n",
+       "      <td>K⁺</td>\n",
+       "      <td>['D', 'D', 'I', 'G']</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ASP.GLY.ILE.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': array([[[-4.524, -2.809,  1.515],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O'], 'l2_d': [2.9466...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3E7Z_1.pdb</td>\n",
+       "      <td>3E7Z</td>\n",
+       "      <td>ZN</td>\n",
+       "      <td>Zn²⁺</td>\n",
+       "      <td>['H']</td>\n",
+       "      <td>1</td>\n",
+       "      <td>HIS.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': array([[[-4.842,  3.076, -2.066],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['N'], 'l2_d': [2.068424], 'van_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7MCI_1.pdb</td>\n",
+       "      <td>7MCI</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>['D', 'D', 'R', 'E']</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ARG.ASP.GLU.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': array([[[-1.000e-03,  5.978e+00, -3.13...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O', 'O'], 'l2_d': [2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2234</th>\n",
+       "      <td>1C3H_1.pdb</td>\n",
+       "      <td>1C3H</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>['N', 'V', 'D', 'Q', 'V', 'D', 'Q', 'Q', 'N', ...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>ASN.ASP.GLN.VAL.</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': array([[[ 3.755,  0.878,  4.795],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2235</th>\n",
+       "      <td>7RWX_1.pdb</td>\n",
+       "      <td>7RWX</td>\n",
+       "      <td>ZN</td>\n",
+       "      <td>Zn²⁺</td>\n",
+       "      <td>['H', 'H', 'H']</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HIS.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': array([[[-6.217, -2.745, -2.579],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['N', 'N'], 'l2_d': [2.1764033, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2236</th>\n",
+       "      <td>6PN8_1.pdb</td>\n",
+       "      <td>6PN8</td>\n",
+       "      <td>ZN</td>\n",
+       "      <td>Zn²⁺</td>\n",
+       "      <td>['C', 'C', 'C', 'C']</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CYS.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': array([[[-3.448,  2.842, -3.131],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['S', 'S', 'S', 'S'], 'l2_d': [2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2237</th>\n",
+       "      <td>6SAG_1.pdb</td>\n",
+       "      <td>6SAG</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>['N', 'P']</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ASN.GLU.PRO.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': array([[[ 3.386e+00,  5.400e-02,  5.46...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O'], 'l2_d': [2.544683, 2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2238</th>\n",
+       "      <td>1GRP_1.pdb</td>\n",
+       "      <td>1GRP</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>Mg²⁺</td>\n",
+       "      <td>['D', 'D']</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ASP.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': array([[[-4.79 ,  2.082,  3.011],\\n   ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O'], 'l2_d': [2.4683151], 'van...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2239 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             pdb pdb_id metal   ion  \\\n",
+       "0     1WWS_1.pdb   1WWS    CA  Ca²⁺   \n",
+       "1     4K9N_1.pdb   4K9N    MG  Mg²⁺   \n",
+       "2     2A0Q_1.pdb   2A0Q     K    K⁺   \n",
+       "3     3E7Z_1.pdb   3E7Z    ZN  Zn²⁺   \n",
+       "4     7MCI_1.pdb   7MCI    CA  Ca²⁺   \n",
+       "...          ...    ...   ...   ...   \n",
+       "2234  1C3H_1.pdb   1C3H    CA  Ca²⁺   \n",
+       "2235  7RWX_1.pdb   7RWX    ZN  Zn²⁺   \n",
+       "2236  6PN8_1.pdb   6PN8    ZN  Zn²⁺   \n",
+       "2237  6SAG_1.pdb   6SAG    CA  Ca²⁺   \n",
+       "2238  1GRP_1.pdb   1GRP    MG  Mg²⁺   \n",
+       "\n",
+       "                                          bound_residue  num_bound_residue  \\\n",
+       "0                                                 ['Y']                  1   \n",
+       "1                        ['N', 'L', 'R', 'N', 'L', 'R']                  6   \n",
+       "2                                  ['D', 'D', 'I', 'G']                  4   \n",
+       "3                                                 ['H']                  1   \n",
+       "4                                  ['D', 'D', 'R', 'E']                  4   \n",
+       "...                                                 ...                ...   \n",
+       "2234  ['N', 'V', 'D', 'Q', 'V', 'D', 'Q', 'Q', 'N', ...                 10   \n",
+       "2235                                    ['H', 'H', 'H']                  3   \n",
+       "2236                               ['C', 'C', 'C', 'C']                  4   \n",
+       "2237                                         ['N', 'P']                  2   \n",
+       "2238                                         ['D', 'D']                  2   \n",
+       "\n",
+       "     paper_bound_residue  num_paper_bound_residue  num_bound_chain  \\\n",
+       "0                   TYR.                        1                1   \n",
+       "1           ARG.ASN.LEU.                        3                2   \n",
+       "2           ASP.GLY.ILE.                        3                2   \n",
+       "3                   HIS.                        1                1   \n",
+       "4           ARG.ASP.GLU.                        3                2   \n",
+       "...                  ...                      ...              ...   \n",
+       "2234    ASN.ASP.GLN.VAL.                        4                2   \n",
+       "2235                HIS.                        1                2   \n",
+       "2236                CYS.                        1                2   \n",
+       "2237        ASN.GLU.PRO.                        3                1   \n",
+       "2238                ASP.                        1                1   \n",
+       "\n",
+       "                                      motif_binding_xyz  num_NN_atom  \\\n",
+       "0     {'xyz': array([[[-1.849, -6.217,  5.614],\\n   ...            6   \n",
+       "1     {'xyz': array([[[ 5.206e+00, -6.530e-01, -3.41...            6   \n",
+       "2     {'xyz': array([[[-4.524, -2.809,  1.515],\\n   ...            6   \n",
+       "3     {'xyz': array([[[-4.842,  3.076, -2.066],\\n   ...            6   \n",
+       "4     {'xyz': array([[[-1.000e-03,  5.978e+00, -3.13...            6   \n",
+       "...                                                 ...          ...   \n",
+       "2234  {'xyz': array([[[ 3.755,  0.878,  4.795],\\n   ...            6   \n",
+       "2235  {'xyz': array([[[-6.217, -2.745, -2.579],\\n   ...            6   \n",
+       "2236  {'xyz': array([[[-3.448,  2.842, -3.131],\\n   ...            6   \n",
+       "2237  {'xyz': array([[[ 3.386e+00,  5.400e-02,  5.46...            6   \n",
+       "2238  {'xyz': array([[[-4.79 ,  2.082,  3.011],\\n   ...            6   \n",
+       "\n",
+       "                                     NN_atom_properties  \n",
+       "0     {'atom_type': ['O'], 'l2_d': [2.8696444], 'van...  \n",
+       "1     {'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...  \n",
+       "2     {'atom_type': ['O', 'O', 'O'], 'l2_d': [2.9466...  \n",
+       "3     {'atom_type': ['N'], 'l2_d': [2.068424], 'van_...  \n",
+       "4     {'atom_type': ['O', 'O', 'O', 'O'], 'l2_d': [2...  \n",
+       "...                                                 ...  \n",
+       "2234  {'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...  \n",
+       "2235  {'atom_type': ['N', 'N'], 'l2_d': [2.1764033, ...  \n",
+       "2236  {'atom_type': ['S', 'S', 'S', 'S'], 'l2_d': [2...  \n",
+       "2237  {'atom_type': ['O', 'O'], 'l2_d': [2.544683, 2...  \n",
+       "2238  {'atom_type': ['O'], 'l2_d': [2.4683151], 'van...  \n",
+       "\n",
+       "[2239 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# util.aa2num[util.]\n",
+    "# util.THREE_TO_ONE['A\n",
+    "#         ']\n",
+    "df_rotamer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "util.one_hot_aa(util.ONE_TO_THREE['C'])"
+   ]
   }
  ],
  "metadata": {
@@ -3030,7 +3352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
