--- a/data.ipynb
+++ b/data.ipynb
@@ -2326,20 +2326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3117/3117 [00:06<00:00, 477.69it/s]\n"
+      "100%|██████████| 3117/3117 [00:06<00:00, 508.24it/s]\n"
      ]
     }
    ],
    "source": [
-    "periodic_table = pd.read_csv('periodic_table_1.csv')\n",
-    "df_homo_filter = pd.read_csv('df_homo_filter.csv')\n",
+    "periodic_table = pd.read_csv('data/periodic_table_1.csv')\n",
+    "df_homo_filter = pd.read_csv('data/df_homo_filter.csv')\n",
     "rotamer_motif = glob.glob('/home/lhtran/class/scaffold_squad/datasets/rotamer_motif/*.pdb')\n",
     "df_rotamer = {'pdb':[], 'pdb_id':[], 'metal':[], 'ion':[], 'bound_residue':[], 'num_bound_residue':[], 'paper_bound_residue':[], 'num_paper_bound_residue':[], 'num_bound_chain':[], 'motif_binding_xyz':[], 'num_NN_atom':[], 'NN_atom_properties':[]}\n",
     "count = 0\n",
@@ -2400,7 +2400,7 @@
     "    df_rotamer['num_paper_bound_residue'].append(row_df_homo_filter['Amino acids or nucleotide residues names'].values[0].count('.'))\n",
     "    df_rotamer['num_bound_chain'].append(len(chains))\n",
     "    df_rotamer['motif_binding_xyz'].append(out)\n",
-    "    df_rotamer['num_NN_atom'].append(len(NN_atoms))\n",
+    "    df_rotamer['num_NN_atom'].append(len(NN_atoms['atom_type']))\n",
     "    df_rotamer['NN_atom_properties'].append(NN_atoms)\n",
     "\n",
     "df_rotamer = pd.DataFrame(df_rotamer)"
@@ -2408,74 +2408,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pdb</th>\n",
+       "      <th>pdb_id</th>\n",
+       "      <th>metal</th>\n",
+       "      <th>ion</th>\n",
+       "      <th>bound_residue</th>\n",
+       "      <th>num_bound_residue</th>\n",
+       "      <th>paper_bound_residue</th>\n",
+       "      <th>num_paper_bound_residue</th>\n",
+       "      <th>num_bound_chain</th>\n",
+       "      <th>motif_binding_xyz</th>\n",
+       "      <th>num_NN_atom</th>\n",
+       "      <th>NN_atom_properties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1WWS_1.pdb</td>\n",
+       "      <td>1WWS</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>[Y]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TYR.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': [[[-1.849 -6.217  5.614], [-1.722 -5.2...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'atom_type': ['O'], 'l2_d': [2.8696444], 'van...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4K9N_1.pdb</td>\n",
+       "      <td>4K9N</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>Mg²⁺</td>\n",
+       "      <td>[N, L, R, N, L, R]</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ARG.ASN.LEU.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': [[[ 5.206 -0.653 -3.413], [ 3.864 -1.0...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2A0Q_1.pdb</td>\n",
+       "      <td>2A0Q</td>\n",
+       "      <td>K</td>\n",
+       "      <td>K⁺</td>\n",
+       "      <td>[D, D, I, G]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ASP.GLY.ILE.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': [[[-4.524 -2.809  1.515], [-3.375 -2.5...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O'], 'l2_d': [2.9466...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3E7Z_1.pdb</td>\n",
+       "      <td>3E7Z</td>\n",
+       "      <td>ZN</td>\n",
+       "      <td>Zn²⁺</td>\n",
+       "      <td>[H]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>HIS.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': [[[-4.842  3.076 -2.066], [-5.643  1.8...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'atom_type': ['N'], 'l2_d': [2.068424], 'van_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7MCI_1.pdb</td>\n",
+       "      <td>7MCI</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>[D, D, R, E]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ARG.ASP.GLU.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': [[[-1.000e-03  5.978e+00 -3.136e+00], ...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O', 'O'], 'l2_d': [2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2234</th>\n",
+       "      <td>1C3H_1.pdb</td>\n",
+       "      <td>1C3H</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>[N, V, D, Q, V, D, Q, Q, N, D]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>ASN.ASP.GLN.VAL.</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': [[[3.755 0.878 4.795], [2.792 0.666 3....</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2235</th>\n",
+       "      <td>7RWX_1.pdb</td>\n",
+       "      <td>7RWX</td>\n",
+       "      <td>ZN</td>\n",
+       "      <td>Zn²⁺</td>\n",
+       "      <td>[H, H, H]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HIS.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': [[[-6.217 -2.745 -2.579], [-5.069 -1.9...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'atom_type': ['N', 'N'], 'l2_d': [2.1764033, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2236</th>\n",
+       "      <td>6PN8_1.pdb</td>\n",
+       "      <td>6PN8</td>\n",
+       "      <td>ZN</td>\n",
+       "      <td>Zn²⁺</td>\n",
+       "      <td>[C, C, C, C]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CYS.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'xyz': [[[-3.448  2.842 -3.131], [-3.314  3.0...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{'atom_type': ['S', 'S', 'S', 'S'], 'l2_d': [2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2237</th>\n",
+       "      <td>6SAG_1.pdb</td>\n",
+       "      <td>6SAG</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ca²⁺</td>\n",
+       "      <td>[N, P]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ASN.GLU.PRO.</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': [[[3.386 0.054 5.462], [2.511 0.171 4....</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'atom_type': ['O', 'O'], 'l2_d': [2.544683, 2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2238</th>\n",
+       "      <td>1GRP_1.pdb</td>\n",
+       "      <td>1GRP</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>Mg²⁺</td>\n",
+       "      <td>[D, D]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ASP.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'xyz': [[[-4.79   2.082  3.011], [-3.86   1.7...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'atom_type': ['O'], 'l2_d': [2.4683151], 'van...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2239 rows × 12 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'xyz': array([[[-1.849, -6.217,  5.614],\n",
-       "         [-1.722, -5.22 ,  4.553],\n",
-       "         [-0.399, -4.468,  4.672],\n",
-       "         [ 0.209, -4.082,  3.667],\n",
-       "         [-2.889, -4.227,  4.63 ],\n",
-       "         [-2.819, -3.114,  3.601],\n",
-       "         [-2.095, -1.942,  3.848],\n",
-       "         [-3.494, -3.226,  2.386],\n",
-       "         [-2.053, -0.902,  2.903],\n",
-       "         [-3.459, -2.201,  1.439],\n",
-       "         [-2.744, -1.043,  1.705],\n",
-       "         [-2.759, -0.016,  0.789],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan],\n",
-       "         [   nan,    nan,    nan]]], dtype=float32),\n",
-       " 'mask': array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "          True,  True,  True, False, False, False, False, False, False,\n",
-       "         False, False, False, False, False, False]]),\n",
-       " 'idx': array([49]),\n",
-       " 'seq': array([18]),\n",
-       " 'pdb_idx': [('A', 49)],\n",
-       " 'atom_type': array([['N', 'C', 'C', 'O', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'O', 'X',\n",
-       "         'X', 'X', 'X', 'X', 'X', 'X', 'X', 'X', 'X', 'X', 'X']],\n",
-       "       dtype='<U1'),\n",
-       " 'xyz_het': array([[0., 0., 0.]]),\n",
-       " 'info_het': [{'idx': 9513, 'atom_id': 'CA', 'atom_type': 'CA', 'name': 'CA'}]}"
+       "             pdb pdb_id metal   ion                   bound_residue  \\\n",
+       "0     1WWS_1.pdb   1WWS    CA  Ca²⁺                             [Y]   \n",
+       "1     4K9N_1.pdb   4K9N    MG  Mg²⁺              [N, L, R, N, L, R]   \n",
+       "2     2A0Q_1.pdb   2A0Q     K    K⁺                    [D, D, I, G]   \n",
+       "3     3E7Z_1.pdb   3E7Z    ZN  Zn²⁺                             [H]   \n",
+       "4     7MCI_1.pdb   7MCI    CA  Ca²⁺                    [D, D, R, E]   \n",
+       "...          ...    ...   ...   ...                             ...   \n",
+       "2234  1C3H_1.pdb   1C3H    CA  Ca²⁺  [N, V, D, Q, V, D, Q, Q, N, D]   \n",
+       "2235  7RWX_1.pdb   7RWX    ZN  Zn²⁺                       [H, H, H]   \n",
+       "2236  6PN8_1.pdb   6PN8    ZN  Zn²⁺                    [C, C, C, C]   \n",
+       "2237  6SAG_1.pdb   6SAG    CA  Ca²⁺                          [N, P]   \n",
+       "2238  1GRP_1.pdb   1GRP    MG  Mg²⁺                          [D, D]   \n",
+       "\n",
+       "      num_bound_residue paper_bound_residue  num_paper_bound_residue  \\\n",
+       "0                     1                TYR.                        1   \n",
+       "1                     6        ARG.ASN.LEU.                        3   \n",
+       "2                     4        ASP.GLY.ILE.                        3   \n",
+       "3                     1                HIS.                        1   \n",
+       "4                     4        ARG.ASP.GLU.                        3   \n",
+       "...                 ...                 ...                      ...   \n",
+       "2234                 10    ASN.ASP.GLN.VAL.                        4   \n",
+       "2235                  3                HIS.                        1   \n",
+       "2236                  4                CYS.                        1   \n",
+       "2237                  2        ASN.GLU.PRO.                        3   \n",
+       "2238                  2                ASP.                        1   \n",
+       "\n",
+       "      num_bound_chain                                  motif_binding_xyz  \\\n",
+       "0                   1  {'xyz': [[[-1.849 -6.217  5.614], [-1.722 -5.2...   \n",
+       "1                   2  {'xyz': [[[ 5.206 -0.653 -3.413], [ 3.864 -1.0...   \n",
+       "2                   2  {'xyz': [[[-4.524 -2.809  1.515], [-3.375 -2.5...   \n",
+       "3                   1  {'xyz': [[[-4.842  3.076 -2.066], [-5.643  1.8...   \n",
+       "4                   2  {'xyz': [[[-1.000e-03  5.978e+00 -3.136e+00], ...   \n",
+       "...               ...                                                ...   \n",
+       "2234                2  {'xyz': [[[3.755 0.878 4.795], [2.792 0.666 3....   \n",
+       "2235                2  {'xyz': [[[-6.217 -2.745 -2.579], [-5.069 -1.9...   \n",
+       "2236                2  {'xyz': [[[-3.448  2.842 -3.131], [-3.314  3.0...   \n",
+       "2237                1  {'xyz': [[[3.386 0.054 5.462], [2.511 0.171 4....   \n",
+       "2238                1  {'xyz': [[[-4.79   2.082  3.011], [-3.86   1.7...   \n",
+       "\n",
+       "      num_NN_atom                                 NN_atom_properties  \n",
+       "0               1  {'atom_type': ['O'], 'l2_d': [2.8696444], 'van...  \n",
+       "1               6  {'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...  \n",
+       "2               3  {'atom_type': ['O', 'O', 'O'], 'l2_d': [2.9466...  \n",
+       "3               1  {'atom_type': ['N'], 'l2_d': [2.068424], 'van_...  \n",
+       "4               4  {'atom_type': ['O', 'O', 'O', 'O'], 'l2_d': [2...  \n",
+       "...           ...                                                ...  \n",
+       "2234            6  {'atom_type': ['O', 'O', 'O', 'O', 'O', 'O'], ...  \n",
+       "2235            2  {'atom_type': ['N', 'N'], 'l2_d': [2.1764033, ...  \n",
+       "2236            4  {'atom_type': ['S', 'S', 'S', 'S'], 'l2_d': [2...  \n",
+       "2237            2  {'atom_type': ['O', 'O'], 'l2_d': [2.544683, 2...  \n",
+       "2238            1  {'atom_type': ['O'], 'l2_d': [2.4683151], 'van...  \n",
+       "\n",
+       "[2239 rows x 12 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_rotamer['motif_binding_xyz'][0]"
+    "df_rotamer#['motif_binding_xyz'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_rotamer = pd.read_csv('df_rotamer.csv')"
+    "# df_rotamer = pd.read_csv('df_rotamer.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_rotamer.to_pickle('df_rotamer.pkl')"
+    "df_rotamer.to_pickle('data/df_rotamer.pkl')\n",
+    "df_rotamer.to_csv('data/df_rotamer.csv')"
    ]
   },
   {
@@ -3218,7 +3441,7 @@
    "source": [
     "# util.aa2num[util.]\n",
     "# util.THREE_TO_ONE['A\n",
-    "#         ']\n",
+    "#      ']\n",
     "eval(df_rotamer['motif_binding_xyz'].values[0])"
    ]
   },
