add tip atom classification trainning

--- a/training.ipynb
+++ b/training.ipynb
@@ -805,7 +805,7 @@
    ],
    "source": [
     "import joblib\n",
-    "joblib.dump(model, 'one_class_svm_model.pkl')"
+    "joblib.dump(model, 'weight/one_class_svm_model_CA.pkl')"
    ]
   },
   {
