Training file was smoothed and comments/markdowns were added to ease navigation

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "7d78d12d-4e88-4cad-b59a-1dbedd507ed0",
    "metadata": {},
    "outputs": [],
@@ -23,8 +23,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97f79c55-cd0a-4c0c-975b-e618e51dcaf6",
+   "metadata": {},
+   "source": [
+    "The goal of this notebook is to train and test different amino acid-data driven classifiers to determine the specificity of a metal binder to bind it's target. Multiple decision tree based classifiers were used, and ultimately a gradient boosted tree was adopted given it's greater test accuracy.\n",
+    "Data categorical data is all one-hot encoded and in the case where multiple residues are known to coordinate a chosen ion, the model makes predictions independently and can be used to come to a consensus on the binder's specificity from that data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "2f42fd0f-613e-452a-a4ed-11993bdd2abb",
    "metadata": {},
    "outputs": [],
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "a0c91eb9-6391-482a-935e-39a10e7d74db",
    "metadata": {},
    "outputs": [],
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "1e2ec064-24cf-47ac-9dc0-18a078714c59",
    "metadata": {},
    "outputs": [],
@@ -59,8 +68,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a10ef45e-c918-42c9-b4c2-f37cf04f2881",
+   "metadata": {},
+   "source": [
+    "From previously saved data, atomic data is dropped and amino acid data is encoded and split into training and testing data. In cases where multiple residues are coordinating the ion, data is unfurled and retains its original indexing (corresponding to the source protein's identity)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "0f323f33-959b-479a-bca0-b38a22f3e591",
    "metadata": {},
    "outputs": [
@@ -68,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5774834437086093\n"
+      "Accuracy: 0.5721854304635762\n"
      ]
     }
    ],
@@ -82,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "541be91d-e153-4675-ad9c-b63a998fb4a1",
    "metadata": {},
    "outputs": [
@@ -90,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5880794701986755\n"
+      "Accuracy: 0.5735099337748344\n"
      ]
     }
    ],
@@ -104,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "d13737b8-d05a-4d52-82be-7a55de4e9e80",
    "metadata": {},
    "outputs": [
@@ -112,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6357615894039735\n"
+      "Accuracy: 0.5576158940397351\n"
      ]
     }
    ],
@@ -127,8 +144,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "290a7068-f21b-442f-af32-e08e3c6dc569",
+   "metadata": {},
+   "source": [
+    "Classifiers from the sklearn package were run and their test accuracies are reported above. Hyperparameters were not thoroughly optimized due to time constraints. Additionally, a neural network was attempted but was too computationally expensive to train on the data set(i.e. kernel was crashed).\n",
+    "However, test accuracy was acceptably high on the gradient boosted classifier, so it was chosen to move ahead with"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "0f959a9e-7222-4c1b-a356-023510b667b4",
    "metadata": {},
    "outputs": [
@@ -138,7 +164,7 @@
        "<Axes: xlabel='PCA1', ylabel='PCA2'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,12 +188,14 @@
     "metals = metals.reset_index()\n",
     "PCA_df=pd.concat([df_components,metals],axis=1)\n",
     "PCA_df\n",
-    "sns.scatterplot(data=PCA_df,x=PCA_df['PCA1'],y=PCA_df['PCA2'],hue=PCA_df['metal'])"
+    "sns.scatterplot(data=PCA_df,x=PCA_df['PCA1'],y=PCA_df['PCA2'],hue=PCA_df['metal'])\n",
+    "\n",
+    "#honestly this wasn't that insightful, we can probably remove this if we want to save space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "f8ca5cdf-44a8-410e-b15b-5dcda3ae86ce",
    "metadata": {},
    "outputs": [
@@ -177,7 +205,7 @@
        "['metal_gradient_clf.joblib']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,8 +216,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2ccf13b-2aae-4876-98d3-e2968245604b",
+   "metadata": {},
+   "source": [
+    "This line saves the model and dumps it into a callable file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "adfb50b8-ece9-4e12-a740-aebdd04bb7b6",
    "metadata": {},
    "outputs": [
@@ -197,27 +233,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6052980132450331\n"
+      "Accuracy: 0.6728476821192053\n"
      ]
     }
    ],
    "source": [
     "from joblib import load\n",
     "gbc = load('metal_gradient_clf.joblib')\n",
+    "x = df_rotamer_pkl.drop(columns=[\"pdb\",\"metal\",\"ion\",\"motif_binding_xyz\",\"num_NN_atom\",\"NN_atom_properties\",'paper_bound_residue','pdb_id'])\n",
+    "x = pd.get_dummies(x,drop_first=True)\n",
     "y = df_rotamer_pkl[\"metal\"]\n",
-    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=.1)\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=.1,random_state=42)\n",
     "gbc.fit(x_train,y_train)\n",
     "y_pred = gbc.predict(x_test)\n",
     "print(\"Accuracy:\", metrics.accuracy_score(y_test,y_pred))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db8c3a93-34fa-4977-90bf-b786ee591d26",
+   "cell_type": "markdown",
+   "id": "22cdade9-8dd6-4efa-bfbd-9638c6c76c86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Code to call the model is demonstrated"
+   ]
   }
  ],
  "metadata": {
